[tool.poetry]
name = "speedtest-producer"
version = "0.1.0"
description = ""
authors = ["Joel Cochran <joelforjava@outlook.com>"]
readme = "README.md"
packages = [{include = "speedtest_producer"}]

[tool.poetry.dependencies]
python = "^3.9"
speedtest-cli = "^2.1.3"
rich = "^13.4.2"
confluent-kafka = "^2.1.1"

[tool.poetry.scripts]
producer = "speedtest_producer.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
